--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -5,3 +5,9 @@
 .navbar .text-danger {
   color: #fd7e14 !important;
 }
+
+/* ---Caption figure--- */
+.caption {
+    font-size: 0.85rem;
+    font-style: italic;
+}
